# shardc2

./: .clang-format  .gitignore  .gn  BUILD.gn  CMakeLists.txt  LICENSE_TEMPLATE  Makefile  README.md  compile_commands.json
gn/: BUILD.gn  BUILDCONFIG.gn
gn/toolchain/: BUILD.gn
libc/: BUILD.gn  CMakeLists.txt  Makefile
libc/include/: stdlib.h  string.h  unistd.h  wchar.h
libc/include/internal/: compiler_fixups.h  crt0.h  posix_types.h
libc/include/internal/nasm/: asmdefs.S
libc/include/internal/win32/: asmdefs.asm  defs.h  ldr.h
libc/include/sys/: mman.h
libc/src/linux/startup/: init.c
libc/src/linux/startup/x86_64/: crt0.S
libc/src/linux/stdlib/: exit.c  mem.c
libc/src/linux/unistd/: mmap.c  syscall.c  write.c
libc/src/linux/unistd/x86_64/: syscall.S
libc/src/linux/x86_64/: crt0.S  crt0.asm  stack.c
libc/src/misc/: stubs.c
libc/src/misc/x86_64/: stubs.asm
libc/src/stdlib/: convert.c  exit.c  mem.c  search.c
libc/src/stdlib/x86_64/: cpu.c  cpuid.S  cpuid.asm
libc/src/string/: compare.c  mem.c  misc.c
libc/src/string/x86_64/: memcpy.S  memcpy.asm  memset.S  memset.asm
libc/src/wchar/: case.c  compare.c  misc.c
libc/src/win32/: crt0.c  ldr.c  rtc.c
libc/src/win32/misc/: ldr.c  libc.rc  resource.h  util.c
libc/src/win32/startup/: crt0.c  dllmain.c  globals.c
libc/src/win32/stdlib/: exit.c  mem.c
libc/src/win32/unistd/: write.c
libc/src/win32/unistd/x86_64/: syscall.asm  syscall.c  syscall_util.c
scripts/: format_gn.sh
test/: BUILD.gn  CMakeLists.txt  Makefile  main.c
test/src/: test.c
