config("compiler_defaults") {
  if (is_win) {
    cflags = [
      "/Zl",
      "/Zo",
      "/std:c17",
    ]
  } else {
    cflags = [
      "-ffreestanding",
      "-fPIC",
      "-Wall",
      "-Wextra",
    ]
  }

  if (is_debug) {
    if (is_win) {
      cflags += [ "/Zi" ]
    } else {
      cflags += [ "-g" ]
    }
  } else {
    if (is_win) {
      cflags += [ "/O2" ]
    } else {
      cflags += [ "-O2" ]
    }
  }
}

config("executable_ldconfig") {
  if (is_win) {
    ldflags = [
      "/nodefaultlib",
      "/subsystem:console",
    ]
  } else {
    ldflags = [ "-nostdlib" ]
  }

  if (is_debug) {
    if (is_win) {
      ldflags += [ "/debug" ]
    }
  }
}
