#  Default toolchain flags
#
#  Copyright 2021 MobSlicer152
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

config("compiler_defaults") {
  defines = []

  if (!is_win || use_clang) {
    cflags = [
      "-ffreestanding",
      "-Wall",
      "-Wextra",
      "-std=c2x",
    ]
    ldflags = [ "-nostdlib" ]
  } else if (is_win) {
    asmflags = [
      "/Cp",
      "/Cx",
    ]
    cflags = [
      "/Zl",
      "/Zo",
      "/std:c17",
    ]
    ldflags = [
      "/nodefaultlib",
      "/subsystem:console",
    ]
  }

  if (is_linux) {
    cflags += [ "-fPIC", "-fPIE" ]
  }

  if (is_debug) {
    if (!is_win || use_clang) {
      cflags += [ "-g" ]
    } else if (is_win) {
      asmflags += [
        "/Zd",
        "/Zi",
      ]
      cflags += [ "/Zi" ]
      ldflags += [ "/debug" ]
    }
  } else {
    defines += [ "NDEBUG=1" ]

    if (!is_win || use_clang) {
      cflags += [ "-O2" ]
    } else {
      cflags += [
        "/O2",
        "/Oi-",
      ]
    }
  }
}
