#  Complex definitions and configurations
# 
#  Copyright 2021 MobSlicer152
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#      http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

if (target_os == "") {
  target_os = host_os
}

if (target_cpu == "") {
  target_cpu = host_cpu
}

if (current_cpu == "") {
  current_cpu = target_cpu
}

if (current_os == "") {
  current_os = target_os
}

is_win =
    host_os == "win" && current_os == "win" && target_os == "win"
is_mac = host_os == "mac" && current_os == "mac" && target_os == "mac"
is_linux = host_os == "linux" && current_os == "linux" && target_os == "linux"

declare_args() {
  is_debug = true # Default to debug
}

_shared_binary_flags = [ "//gn:compiler_defaults" ]

set_defaults("executable") {
  configs = _shared_binary_flags
  configs += [ "//gn:executable_ldconfig" ]
}

set_defaults("static_library") {
  configs = _shared_binary_flags
}

if (is_win) {
  set_default_toolchain("//gn/toolchain:msvc")
} else {
  set_default_toolchain("//gn/toolchain:clang")
}
